<resources>
    <string name="app_name">Medical Test Estimator</string>
    <string name="company_signature">By Covariance</string>
    <string name="age_info">For patients >= 80 y/o, a default of 79 y/o may be reasonably used as the 10-year ASCVD risk for this population is generally >10%.</string>
    <string name="smoker_info">Defined as cigarette smoker based on agent population studied in relevant clinical trials."
			+"Use clinical discretion in regards to patients who use e-cigarettes and other tobacco products.</string>
    <string name="cvd_response_text">Low-risk (less than 5%) \n Borderline risk (5% to 7.4%) \n
        Intermediate risk (7.5% to 19.9%) \n High risk (equal or above 20%) </string>
    <string name="doctor_first_screen">ΙΑΤΡΟΣ</string>
    <string name="patient_first_screen">ΑΣΘΕΝΗΣ</string>
    <string name="select_user_type">Επιλέξτε Τύπο Χρήστη</string>
    <string name="doctor_screen_message">"Εισοδος στην εφαρμογή"</string>
    <string name="patient_screen_message">"Ασθενείς"</string>
    <string name="low_Risk"> Low-risk </string>
    <string name="Borderline_Risk">Borderline risk </string>
    <string name="intermediate_Risk">Intermediate risk </string>
    <string name="hight_Risk">High risk </string>
    <string name="username_error">The username cannot be empty.</string>
    <string name="password_error">Password must be at least 4 characters long, must contain a special character and include no white spaces.</string>
    <string name="patient_not_in_db">The username or password credentials you provided are wrong.</string>
    <string name="patient_already_in_db">"The username provided already exists. Please set another username."</string>
    <string name="register_success">You have been successfully registered to the database. Login with your credentials to use the application.</string>
    <string name="doctor_password_error">Password must be at least 5 characters long, must contain a special character and include no white spaces.</string>
    <string name="doctor_not_in_db">The username or password credentials you provided are wrong.</string>
    <string name="cvd_test_results">CVD Test</string>
    <string name="cvd_test_result">The Framingham Risk Score for you is : </string>
    <string name="cvd_test_1">CVD RESULT</string>
    <string name="cvd_test_result_title">10-year risk for ASCVD is categorized as:</string>
    <string name="diabetes_test_1">DIABETES RESULT</string>
    <string name="diabetes_test_results">DIABETES Test</string>
    <string name="diabetes_test_result">The probability of developing Type 2 Diabetes is : </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Παρακαλώ εισάγετε τα δεδομένα εισόδου :</string>
    <string name="register_title">Παρακαλώ εισάγετε τα δεδομένα εγγραφής : </string>
    <string name="account_info_text">Εισάγετε τα στοιχεία του λογαριασμού σας</string>
    <string name="account_info_name">Εισάγετε τα όνομα σας</string>
    <string name="account_info_lastname">Εισάγετε το επώνυμο σας</string>
    <string name="account_info_occupation">Εισάγετε τo επάγγελμα</string>
    <string name="account_info_date_birth">Εισάγετε την ημερομηνία γέννηση σας</string>
    <string name="account_info_years_of_prof">Xρόνια επαγγέλματος</string>
    <string name="register_username_hint">Εισάγετε όνομα χρήστη</string>
    <string name="register_password">Εισάγετε το κωδικό χρήστη</string>
    <string name="register_password_hint">Εισάγετε κωδικό χρήστη</string>
    <string name="register_re_enterpassword_hint">Επανάεισάγετε το κωδικό</string>
    <string name="register_doctor_username">Όνομα χρήστη</string>
    <string name="register_doctor_username_hint">Εισάγετε όνομα χρήστη</string>
    <string name="register_doctor_ρε_username_hint">Επαναεισάγετε όνομα</string>
    <string name="register_doctor_password_hint">Εισάγετε κωδικό χρήστη</string>
    <string name="register_doctor_ρε_password_hint">Επαναεισάγετε κωδικό</string>
    <string name="medication">Prescribed Antihypertensive Medication</string>
    <string name="steroids">Prescribed Steroids</string>
    <string name="family_history">Family History</string>
    <string name="diabetes_or_sibling">Parent or Sibling with Diabetes</string>
    <string name="diabetes_and_sibling">Parent and Sibling with Diabetes</string>
    <string name="diabetes_no">No Diabetes</string>
    <string name="Smoking">Smoking History</string>
    <string name="BMI">Body Mass Index</string>
    <string name="drawer_test1">CVD TEST</string>
    <string name="drawer_test2">DIABETES TEST</string>
    <string name="result">RISK FOR TYPE 2 DIABETES : </string>
    <string name="treatment">Treatment for High Blood Pressure?</string>
    <string name="terms_of_use_1">Τα δεδομένα σας δεν αποστέλονται πουθενά. Η εφαρμογή δεν έχει διασύνδεση και δεν χρησιμοποιεί internet.</string>
    <string name="terms_of_use_2"> Η εφαρμογή αυτή δεν αντικαθιστά την γνωμάτευση του γιατρού.</string>
    <string name="terms_of_use_3">Ανατρέξτε στους όρους, ξανά, από το menu.</string>
    <string name="MDIQ1">1. Have you felt low in spirits or sad?</string>
    <string name="MDIQ2">2. Have you lost interest in your daily activities?</string>
    <string name="MDIQ3">3. Have you felt lacking in energy and strength?</string>
    <string name="MDIQ4">4. Have you felt less self-confident?</string>
    <string name="MDIQ5">5. Have you had a bad conscience or feelings of guilt?</string>
    <string name="MDIQ6">6. Have you felt that life wasn’t worth living?</string>
    <string name="MDIQ7">7. Have you had difficulty in concentrating?</string>
    <string name="MDIQ8">8. Have you felt very restless?</string>
    <string name="MDIQ9">9. Have you felt subdued or slowed down?</string>
    <string name="MDIQ10">10. Have you been sleeping too little?</string>
    <string name="MDIQ11">11. Have you had trouble sleeping at night?</string>
    <string name="MDIQ12">12. Have you suffered from reduced appetite?</string>
    <string name="MDIQ13">13. Have you suffered from increased appetite?</string>
    <string name="MDIA1">All The Time</string>
    <string name="MDIA2">Most Of The Time</string>
    <string name="MDIA3">Slightly More Than Half The Time</string>
    <string name="MDIA4">Slightly Less Than Half The Time</string>
    <string name="MDIA5">Some Of The Time</string>
    <string name="MDIA6">At No Time</string>
    <string name="mdi_test_score">Your total score : </string>
    <string name="mdi_test_depression">The severity of depression : </string>
    <string name="bdi_test_score">Το συνολικό σκόρ : </string>
    <string name="bdi_test_depression">Η σοβαρότητα της καταθλιψης : </string>
    <string name="gds_test_intro_text">Επέλεξε την καλύτερη απάντηση για το πως ένοιωθες την τελευταία εβδομάδα</string>
    <string name="GDSQ1">Είστε ικανοποιημένος από τη ζωή σας</string>
    <string name="GDSQ2">Έχουν ατονίσει αρκετές από τις δραστηριότητες-ενδιαφέροντα σας</string>
    <string name="GDSQ3">Αισθάνεστε ότι η ζωή σας είναι άδεια</string>
    <string name="GDSQ4">Συχνά νοιώθετε ότι βαριέσθε</string>
    <string name="GDSQ5">Έχετε καλή διάθεση τον περισσότερο καιρό</string>
    <string name="GDSQ6">Φοβάστε ότι κάτι κακό πρόκειται να σας συμβεί</string>
    <string name="GDSQ7">Αισθάνεστε ευτυχής τον περισσότερο καιρό</string>
    <string name="GDSQ8">Αισθάνεστε συχνά αβοήθητος</string>
    <string name="GDSQ9">Προτιμάτε να μένετε στο σπίτι από το να βγαίνετε και να κάνετε καινούργια πράγματα</string>
    <string name="GDS10">Αισθάνεστε ότι έχετε περισσότερα προβλήματα μνήμης από τους άλλους ανθρώπους</string>
    <string name="GDS11">Πιστεύετε ότι είναι υπέροχο να ζεί κανείς</string>
    <string name="GDS12">Αισθάνεστε ότι δεν αξίζει να είστε στην κατάσταση που βρίσκεστε τώρα</string>
    <string name="GDS13">Αισθάνεστε γεμάτος ενέργεια</string>
    <string name="GDS14">Αισθάνεστε ότι η κατάστασή σας είναι χωρίς ελπίδα</string>
    <string name="GDS15">Αισθάνεστε ότι οι περισσότεροι άνθρωποι είναι καλύτερα από εσάς</string>
    <string name="gds_test_results">Getiatric Depression Scale Score Results</string>
    <string name="gds_test_score">Your results  score : %1$s</string>
    <string name="opqol_test_qol">The level of quality of life : </string>
    <string name="BAIQ1">1. Numbness or tingling</string>
    <string name="BAIQ2">2. Feeling hot</string>
    <string name="BAIQ3">3. Wobbliness in legs</string>
    <string name="BAIQ4">4. Unable to relax</string>
    <string name="BAIQ5">5. Fear of worst happening</string>
    <string name="BAIQ6">6. Dizzy or lightheaded</string>
    <string name="BAIQ7">7. Heart pounding/racing</string>
    <string name="BAIQ8">8. Unsteady</string>
    <string name="BAIQ9">9. Terrified or afraid</string>
    <string name="BAIQ10">10. Nervous</string>
    <string name="BAIQ11">11. Feeling of choking</string>
    <string name="BAIQ13">13. Shaky / unsteady</string>
    <string name="BAIQ14">14. Fear of losing control</string>
    <string name="BAIQ15">15. Difficulty in breathing</string>
    <string name="BAIQ16">16. Fear of dying</string>
    <string name="BAIQ17">17. Scared</string>
    <string name="BAIQ18">18. Indigestion</string>
    <string name="BAIQ19">19. Faint / lightheaded</string>
    <string name="BAIQ20">20. Face flushed</string>
    <string name="BAIQ21">21. Hot/cold sweats </string>
    <string name="BAIA1">Not At All.</string>
    <string name="BAIA2">Mildly but it didn’t bother me much.</string>
    <string name="BAIA3">Moderately - it wasn’t pleasant at times.</string>
    <string name="BAIA4">Severely – it bothered me a lot.</string>
    <string name="BAIRESULT1">A grand sum between 0 – 21 indicates very low anxiety. That is usually a good thing. However, it is
                            possible that you might be unrealistic in either your assessment which would be denial or that you have
                            learned to “mask” the symptoms commonly associated with anxiety. </string>
    <string name="BAIRESULT1B">Too little “anxiety” could indicate that
                            you are detached from yourself, others, or your environment</string>
    <string name="OPQOL35testtitle">Ερωτηματολόγιο Ποιότητας Ζωής Ηλικιωμένων</string>
    <string name="OPQOL35testinfo1">Θα θέλαμε να σας ρωτήσουμε σχετικά με την ποιότητα ζωής σας:</string>
    <string name="OPQOL35testinfo2">Παρακαλούμε τσεκάρετε ένα κουτί σε κάθε σειρά. Δεν υπάρχουν σωστές ή λάθος
            απαντήσεις. Παρακαλούμε επιλέξτε την απάντηση που περιγράφει καλύτερα τις
            αντιλήψεις σας.</string>
    <string name="OPQOL35Q1">1. Αναλογιζόμενος/η τα αρνητικά και θετικά πράγματα που απαρτίζουν την ποιότητα ζωής σας,
πως θα την βαθμολογούσατε συνολικά;</string>
    <string name="OPQOL35Q1nfo">Η ποιότητα ζωής σας είναι συνολικά:</string>
    <string name="OPQOL35Q1A1">Πολύ Καλή</string>
    <string name="OPQOL35Q1A2">Καλή</string>
    <string name="OPQOL35Q1A3">Μέτρια</string>
    <string name="OPQOL35Q1A4">Κακή</string>
    <string name="OPQOL35Q2info1">2. Παρακαλώ σημειώστε τον βαθμό στον οποίο συμφωνείτε ή διαφωνείτε με κάθε μια από τις παρακάτω προτάσεις</string>
    <string name="OPQOL35Q2info2">Τσεκάρετε ένα κουτί σε κάθε σειρά</string>
    <string name="OPQOL35Q2Category1Q1">(1) Απολαμβάνω τη ζωή μου συνολικά</string>
    <string name="OPQOL35Q2A1">Συμφωνώ απόλυτα</string>
    <string name="OPQOL35Q2A2">Συμφωνώ</string>
    <string name="OPQOL35Q2A3">Ούτε συμφωνώ ούτε διαφωνώ</string>
    <string name="OPQOL35Q2A4">Διαφωνώ</string>
    <string name="OPQOL35Q2A5">Διαφωνώ απόλυτα</string>
</resources>