<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/OPQOLDummyRelLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/opqoQ2cTextV"
    android:background="@drawable/relativelayout_style">

    <TextView
        android:id="@+id/opqolDummyTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:minHeight="64dp"
        android:text="@string/OPQOL35Q2Category1Q1"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/OPQOLDummyRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/opqolDummyTxtView">

        <RadioButton
            android:id="@+id/OPQOLDummyRB1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/OPQOLDummyRadioGroup"
            android:layout_gravity="center|left"
            android:gravity="center|left"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/OPQOL35Q2A1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/OPQOLDummyRB2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/OPQOLQ2C1RG"
            android:layout_gravity="center|left"
            android:gravity="center|left"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/OPQOL35Q2A2"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/OPQOLDummyRB3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/OPQOLQ2C1RG"
            android:layout_gravity="center|left"
            android:gravity="center|left"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/OPQOL35Q2A3"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/OPQOLDummyRB4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/OPQOLQ2C1RG"
            android:layout_gravity="center|left"
            android:gravity="center|left"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/OPQOL35Q2A4"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/OPQOLDummyRB5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/OPQOLQ2C1RG"
            android:layout_gravity="center|left"
            android:gravity="center|left"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/OPQOL35Q2A5"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RadioGroup>
</RelativeLayout>