<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="CheckOQPOLPatientViewModel"
            type="com.example.cvdriskestimator.viewModels.CheckOPQOLViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/opqolFr1formConLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_shape">

        <!--    covariance title form-->

        <include
            android:id="@+id/include_cvd_title_form"
            layout="@layout/cvd_title_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/horGL1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        application menu panel-->


        <include
            android:id="@+id/include_pop_up_menu"
            layout="@layout/popup_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horGL1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.14" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/radioBXSetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <RelativeLayout
            android:id="@+id/BAITestTitleLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horGL1">

            <TextView
                android:id="@+id/opqolTestTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/blue_baitest_form_title_style"
                android:drawableLeft="@drawable/ic_anxiety_24_black"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:singleLine="false"
                android:text="OPQOL Test"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/opqolFr1scrollview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fadeScrollbars="false"
            android:fillViewport="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horGL1">

            <LinearLayout
                android:id="@+id/opqolCheckLinLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <View
                    android:id="@+id/pillowVIew"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@+id/formTxtV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:justificationMode="inter_word"
                    android:text="@string/OPQOL35testtitle"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:id="@+id/OPQOLQ1RelLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/relativelayout_style">

                    <TextView
                        android:id="@+id/opqolInfoTextBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/light_blue_textview"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:minHeight="64dp"
                        android:text="@string/OPQOL35testinfo1"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/opqolInfoText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/opqolInfoTextBold"
                        android:background="@drawable/light_blue_textview_2"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:minHeight="64dp"
                        android:text="@string/OPQOL35testinfo2"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <View
                        android:id="@+id/pillow_2"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/opqolInfoText2" />

                    <TextView
                        android:id="@+id/opqoQ1aTextV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pillow_2"
                        android:background="@drawable/light_blue_textview"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:minHeight="64dp"
                        android:text="@string/OPQOL35Q1"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/OPQOLQ1RelLayoutb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pillow_3"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/light_blue_textview_2">

                    <TextView
                        android:id="@+id/opqoQ1TextV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/light_blue_textview"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:minHeight="64dp"
                        android:text="@string/OPQOL35Q1nfo"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/OPQOLQ1RG"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/opqoQ1TextV">

                        <RadioButton
                            android:id="@+id/radioBtnOPQOLA1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/OPQOLQ1RG"
                            android:layout_gravity="center|left"
                            android:gravity="center|left"
                            android:paddingLeft="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/OPQOL35Q1A1"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/radioBtnOPQOLA2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/OPQOLQ1RG"
                            android:layout_gravity="center|left"
                            android:gravity="center|left"
                            android:paddingLeft="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/OPQOL35Q1A2"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/radioBtnOPQOLA3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/OPQOLQ1RG"
                            android:layout_gravity="center|left"
                            android:gravity="center|left"
                            android:paddingLeft="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/OPQOL35Q1A3"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/radioBtnOPQOLA4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/OPQOLQ1RG"
                            android:layout_gravity="center|left"
                            android:gravity="center|left"
                            android:paddingLeft="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/OPQOL35Q1A4"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </RadioGroup>
                </RelativeLayout>

                <TextView
                    android:id="@+id/opqoQ2TextV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pillow_4"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/light_blue_textview"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:minHeight="64dp"
                    android:text="@string/OPQOL35Q2info1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/opqoQ2bTextV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/opqoQ2TextV"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/light_blue"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:minHeight="64dp"
                    android:text="@string/OPQOL35Q2info2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/opqolPillow_5"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_below="@+id/opqoQ2bTextV"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/very_light_gray" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/randomRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/opqolPillow_5"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />


                <RelativeLayout
                    android:id="@+id/arrowButtonsRelLayoyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--                    <androidx.appcompat.widget.AppCompatButton-->
                    <!--                        android:id="@+id/submitBtn"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:layout_centerInParent="true"-->
                    <!--                        android:layout_gravity="center"-->
                    <!--                        android:layout_marginTop="8dp"-->
                    <!--                        android:layout_marginBottom="8dp"-->
                    <!--                        android:background="@drawable/bai_button_rounded_corners"-->
                    <!--                        android:padding="20dp"-->
                    <!--                        android:text="Υπολογισμός"-->
                    <!--                        android:textAllCaps="false"-->
                    <!--                        android:textSize="20sp"-->
                    <!--                        android:visibility="visible"-->
                    <!--                        tools:ignore="TextContrastCheck" />-->

                    <ImageView
                        android:id="@+id/right_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/right_arrow"
                        android:backgroundTint="@color/light_blue"
                        android:padding="20dp"
                        android:text="Επόμενη Φόρμα"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:visibility="visible"
                        tools:ignore="TextContrastCheck" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/clearBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/right_arrow"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="false"
                        android:layout_alignParentBottom="false"
                        android:layout_centerVertical="false"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/bai_button_rounded_corners"
                        android:text="Καθαρισμός φόρμας"
                        android:textAllCaps="false" />


                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>